--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 .externalNativeBuild
 .idea/*
 .idea/
+/.idea/caches/build_file_checksums.ser
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/runConfigurations.xml
+/.idea/vcs.xml
